// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should ignore all html comments 1`] = `
Object {
  "Options": Object {
    "ID": "component",
  },
  "html": "<span>Moon</span>",
}
`;

exports[`should ignore script tag content 1`] = `
Object {
  "Options": Object {
    "ID": "component",
  },
  "html": "
<script>
  var result = 2 < 5;
</script>
",
}
`;

exports[`should insert variable in attributes 1`] = `
Object {
  "Options": Object {
    "ID": "component",
    "value": "Value",
  },
  "html": "<input type=\\"text\\" value=\\"Value\\">",
}
`;

exports[`should optimize "if"/"for" tag, if it is only child 1`] = `
Object {
  "Options": Object {
    "ID": "component",
    "a": true,
    "b": Array [
      1,
    ],
  },
  "html": "
<div>
  <p>a</p>
  <p>b</p>
</div>
",
}
`;

exports[`should place placeholders for multiply "if" and "for" tags 1`] = `
Object {
  "Options": Object {
    "ID": "component",
  },
  "html": "
<div>
  <!--0-->
  <!--1-->
</div>
",
}
`;

exports[`should place placeholders for multiply "if" tags 1`] = `
Object {
  "Options": Object {
    "ID": "component",
  },
  "html": "
<div>
  <!--0-->
  <!--1-->
</div>
",
}
`;

exports[`should properly for with filters 1`] = `
Object {
  "Options": Object {
    "ID": "component",
    "filters": Object {
      "append": [Function],
      "upperCase": [Function],
    },
    "text": "upper_",
  },
  "html": "<p>UPPER_CASE</p>",
}
`;

exports[`should properly work with more then one node on topmost level 1`] = `
Object {
  "Options": Object {
    "ID": "component",
  },
  "html": "
<p>first</p>
<p>second</p>
",
}
`;

exports[`should properly work with text constants in attributes 1`] = `
Object {
  "Options": Object {
    "ID": "component",
    "bar": "bar",
  },
  "html": "<div class=\\"foo bar baz\\"></div>",
}
`;

exports[`should properly work with text constants in text nodes 1`] = `
Object {
  "Options": Object {
    "ID": "component",
    "bar": "bar",
  },
  "html": "
<p>foo
  <!--0-->bar
  <!--1--> baz
</p>
",
}
`;

exports[`should render attributes without quotes 1`] = `
Object {
  "Options": Object {
    "ID": "component",
    "name": "name",
  },
  "html": "<div class=\\"name\\"></div>",
}
`;

exports[`should render empty attributes 1`] = `
Object {
  "Options": Object {
    "ID": "component",
  },
  "html": "<input type=\\"checkbox\\" value=\\"\\" checked=\\"\\">",
}
`;

exports[`should render simple DOM 1`] = `
Object {
  "Options": Object {
    "ID": "component",
  },
  "html": "<div>Content</div>",
}
`;

exports[`should replace HTML entities with Unicode symbols 1`] = `
Object {
  "Options": Object {
    "ID": "component",
  },
  "html": "\\"&amp;'&lt;&gt;©£±¶ — € ♥¬Exists;",
}
`;

exports[`should save value for variables in complex cases 1`] = `
Object {
  "Options": Object {
    "ID": "component",
    "bar": "second",
    "foo": "first",
  },
  "html": "<div class=\\"first second\\"></div>",
}
`;

exports[`should save value for variables in complex cases 2`] = `
Object {
  "Options": Object {
    "ID": "component",
    "bar": "second",
    "foo": "updated",
  },
  "html": "<div class=\\"updated second\\"></div>",
}
`;

exports[`should support don't render checked == false attr 1`] = `
Object {
  "Options": Object {
    "ID": "component",
  },
  "html": "<input type=\\"checkbox\\">",
}
`;

exports[`should support expressions without variables 1`] = `
Object {
  "Options": Object {
    "ID": "component",
  },
  "html": "7",
}
`;

exports[`should support global variables 1`] = `
Object {
  "Options": Object {
    "ID": "component",
    "host": "sham-ui-ssr.example.com",
  },
  "html": "
<i>expr
  <!--0-->,
  <!--1-->if
  <!--0-->,
  <!--2-->for
  <!--1-->, <i class=\\"attr\\"></i>
</i>
",
}
`;

exports[`should support global variables 2`] = `
Object {
  "Options": Object {
    "ID": "component",
    "array": Array [
      1,
      2,
      3,
    ],
    "obj": Object {
      "a": 1,
      "b": 2,
    },
  },
  "html": "
array
<!--0-->,
<!--1-->4
<!--2-->,
<!--3-->a;b
<!--4-->,
<!--5-->{\\"a\\":1,\\"b\\":2}
",
}
`;

exports[`should support render checked == true attr 1`] = `
Object {
  "Options": Object {
    "ID": "component",
  },
  "html": "<input type=\\"checkbox\\" checked=\\"\\">",
}
`;

exports[`should support style attribute 1`] = `
Object {
  "Options": Object {
    "ID": "component",
  },
  "html": "<div style=\\"background-color: red\\">DANGER</div>",
}
`;
